# kuberoutes

./: Cargo.toml  Makefile  README.md  policies.yaml  release.sh  web-allow-all.yaml  web-allow.yaml  web-deployment.yaml
src/: errors.rs  kubectl.rs  main.rs  policies.rs  rules.rs
