[package]
name = "kuberoutes"
description = "Tool to visualise network policies in Kubernetes with kubectl"
version = "0.1.0"
authors = ["Chris Atkin <atkinchris@gmail.com>"]

[dependencies]
ansi_term = "0.11.0"
chrono = { version = "0.4", features = ["serde"] }
clap = "2.32.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
subprocess = "0.1.16"
text_io = "0.1.7"
